<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.16">
  <DUT Name="Recipe_Status" Id="{9115e192-25db-4836-8730-37b69a848e1d}">
    <Declaration><![CDATA[TYPE Recipe_Status :
STRUCT
    Recipe_Running          : BOOL;
    Recipe_Complete         : BOOL;
    Recipe_Aborted          : BOOL;
	Recipe_Paused 			: BOOL;
    Current_Step            : UINT;
    Current_Step_Name       : STRING(30);
    Current_Target_kW       : REAL;
    Step_Elapsed_Time       : TIME;
    Step_Remaining_Time     : TIME;
    Step_Duration           : TIME;
    Step_Progress_Pct       : REAL;
    Total_Recipe_Time       : TIME;
    Total_Elapsed_Time      : TIME;
    Total_Remaining_Time    : TIME;
    Recipe_Progress_Pct     : REAL;
    Status_Message          : STRING(100);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>